Fix catalog layout alignment.
Conflicts:
	CHANGELOG.md

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -509,6 +509,7 @@ hr ~ div.center:not(.ad-cnt) {
   margin: 0 2px 5px;
   max-height: 320px;
   word-break: break-word;
+  vertical-align: top;
 }
 .catalog-thread > a {
   flex-shrink: 0;
